--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Industrious by TEMPLATED</title>
+		<title>Portfolio by YuDaYeon</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="" />
@@ -14,10 +14,10 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="is-preload">
-
+	
 		<!-- Header -->
 			<header id="header">
-				<a class="logo" href="index.html">Industrious</a>
+				<a class="logo" href="index.html">Portfolio</a>
 				<nav>
 					<a href="#menu">Menu</a>
 				</nav>
@@ -35,9 +35,8 @@
 		<!-- Banner -->
 			<section id="banner">
 				<div class="inner">
-					<h1>Industrious</h1>
-					<p>A responsive business oriented template with a video background<br />
-					designed by <a href="https://templated.co/">TEMPLATED</a> and released under the Creative Commons License.</p>
+					<h1>Portfolio by YuDaYeon</h1>
+					<p>이 사이트를 만들 때 사용한 템플릿 : <a href="https://templated.co/">TEMPLATED</a><br>html, css, javascript 기반 제작</p>
 				</div>
 				<video autoplay loop muted playsinline src="images/banner.mp4"></video>
 			</section>
@@ -46,62 +45,79 @@
 			<section class="wrapper">
 				<div class="inner">
 					<header class="special">
-						<h2>Sem turpis amet semper</h2>
-						<p>In arcu accumsan arcu adipiscing accumsan orci ac. Felis id enim aliquet. Accumsan ac integer lobortis commodo ornare aliquet accumsan erat tempus amet porttitor.</p>
+						<h2>used tools</h2>
+						<p>
+							<img alt="" src="">
+						</p>
 					</header>
+					
+					<!-- Skills -->
+					<h2 align="center">Skills</h2>
+					<h3>programming language</h3>
+						<ul class="icons">
+							<li><img alt="" src="images/java_icon.png" style="width:100px;"><p>Java<br><progress value="90" max="100"></progress></p></li>
+							<li><img alt="" src="images/javascript_icon.png" style="width:100px;"><p>JavaScript<br><progress value="90" max="100"></progress></p></li>
+							<li><img alt="" src="images/csharp_icon.png" style="width:100px;"><p>C#<br><progress value="90" max="100"></progress></p></li>
+							<li><img alt="" src="images/cplusplus_icon.png" style="width:100px;"><p>C++<br><progress value="90" max="100"></progress></p></li>
+							<li><img alt="" src="images/php_icon.png" style="width:100px;"><p>PHP<br><progress value="90" max="100"></progress></p></li>
+						</ul>
+					<h3>database language</h3>
+						<ul class="icons">
+							<li><img alt="" src="images/oracle_icon.png" style="width:100px;"><p>oracle<br><progress value="90" max="100"></progress></p></li>
+							<li><img alt="" src="images/mysql_icon.png" style="width:100px;"><p>mysql<br><progress value="90" max="100"></progress></p></li>
+						</ul>
+					</div>
+				</section>
+				
+		<!-- CTA -->
+			<section id="cta" class="wrapper">
+				<div class="inner">
+					<h2>Curabitur ullamcorper ultricies</h2>
+					<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing. Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing sed feugiat eu faucibus. Integer ac sed amet praesent. Nunc lacinia ante nunc ac gravida.</p>
+				</div>
+			</section>
+			
+			<!-- github link -->
+			<section class="wrapper">
+				<div class="inner">
+					<h2 align="center">github link</h2>
 					<div class="highlights">
-						<section>
+						<section style="width:50%;">
 							<div class="content">
 								<header>
-									<a href="#" class="icon fa-vcard-o"><span class="label">Icon</span></a>
-									<h3>Feugiat consequat</h3>
+									<a href="#"><img alt="" src="images/github_icon.png"></a>
+									<h3>MyShop-BO</h3>
 								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+								<p>운영하는 쇼핑몰 관리하기 위한 시스템</p>
 							</div>
 						</section>
-						<section>
+						<section style="width:50%;">
 							<div class="content">
 								<header>
-									<a href="#" class="icon fa-files-o"><span class="label">Icon</span></a>
-									<h3>Ante sem integer</h3>
+									<a href="#"><img alt="" src="images/github_icon.png"></a>
+									<h3>PMS</h3>
 								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+								<p>주차 번호판 인식 후 등록되는 주차 정보 또는 주차 회원 관리하는 시스템</p>
 							</div>
 						</section>
-						<section>
+					</div>
+					<div class="highlights">
+						<section style="width:50%;">
 							<div class="content">
+								<a href="#"><img alt="" src="images/github_icon.png"></a>
 								<header>
-									<a href="#" class="icon fa-floppy-o"><span class="label">Icon</span></a>
-									<h3>Ipsum consequat</h3>
+									<h3>KM_AF_SHOP</h3>
 								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+								<p>일반 쇼핑몰 사이트처럼 쇼핑할 수 있는 사이트</p>
 							</div>
 						</section>
-						<section>
+						<section style="width:50%;">
 							<div class="content">
+								<a href="#"><img alt="" src="images/github_icon.png"></a>
 								<header>
-									<a href="#" class="icon fa-line-chart"><span class="label">Icon</span></a>
-									<h3>Interdum gravida</h3>
+									<h3>Oorstory_application</h3>
 								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
-							</div>
-						</section>
-						<section>
-							<div class="content">
-								<header>
-									<a href="#" class="icon fa-paper-plane-o"><span class="label">Icon</span></a>
-									<h3>Faucibus consequat</h3>
-								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
-							</div>
-						</section>
-						<section>
-							<div class="content">
-								<header>
-									<a href="#" class="icon fa-qrcode"><span class="label">Icon</span></a>
-									<h3>Accumsan viverra</h3>
-								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+								<p>자전거를 타면서 여행할 수 있는 안드로이드 ar게임</p>
 							</div>
 						</section>
 					</div>
