--- a/index.html
+++ b/index.html
@@ -143,14 +143,21 @@
 						<h2>used tools</h2>
 						<p><h3>os</h3>
 							<img alt="" src="images/windows_icon.png">
-							<img alt="" src="images/ubuntu_icon.png">
+							<img alt="" src="images/linux_icon.png">
 						</p>
 						<p><h3>server</h3>
 							<img alt="" src="images/apache_icon.png">
+							<img alt="" src="images/aws_icon.png">
+							<img alt="" src="images/nginx_icon.png">
+							<img alt="" src="images/gunicorn_icon.png">
 						</p>
 						<p><h3>framework</h3>
 							<img alt="" src="images/spring_icon.png">
 							<img alt="" src="images/mybatis_icon.png">
+							<img alt="" src="images/flask_icon.png">
+							<img alt="" src="images/jsp_icon.png">
+							<img alt="" src="images/react_icon.png">
+							<img alt="" src="images/jquery_icon.png">
 						</p>
 						<p><h3>database</h3>
 							<img alt="" src="images/oracle_icon.png">
@@ -307,6 +314,17 @@
 							</div>
 						</section>
 					</div>
+					<div class="highlights">
+						<section style="width:50%;">
+							<div class="content">
+								<header>
+									<a href="https://github.com/ystepanie/PFP1"><img alt="" src="images/github_icon.png"></a>
+									<h3>PFP1</h3>
+								</header>
+								<p>온라인 중계거래 사이트</p>
+							</div>
+						</section>
+					</div>
 				</div>
 			</section>
 
@@ -377,7 +395,7 @@
 						<section>
 							<h3>contact</h3>
 							<p>이름 : 유다연<br>
-							주소 : 경기도 고양시 덕양구 원흥동746 201호<br>
+							주소 : 경기도 고양시 덕양구 고양대로1978번길 61 아델라인 B동 301호<br>
 							<a href="tel:010-4872-9128">전화번호 : 010-4872-9128</a><br>
 							<a href="mailto:ydy2128@gmail.com">email : ydy2128@gmail.com</a>
 							</p>
@@ -396,7 +414,7 @@
 							<ul class="plain">
 								<li><a href="#"><i class="icon fa-twitter">&nbsp;</i>Twitter</a></li>
 								<li><a href="#"><i class="icon fa-facebook">&nbsp;</i>Facebook</a></li>
-								<li><a href="https://www.instagram.com/ydy2128/"><i class="icon fa-instagram">&nbsp;</i>Instagram</a></li>
+								<li><a href="https://www.instagram.com/you._.sweetly"><i class="icon fa-instagram">&nbsp;</i>Instagram</a></li>
 								<li><a href="https://github.com/ydy2128"><i class="icon fa-github">&nbsp;</i>Github</a></li>
 							</ul>
 						</section>
