--- a/index.html
+++ b/index.html
@@ -404,6 +404,44 @@
 							</div>
 						</section>
 					</div>
+					<div class="content">
+						<h3>경력 기술서</h3>
+						문서 유형별로 최적의 AI 모델(텍스트 검출/인식) <b>선정</b> 및 <b>튜닝</b><br>
+						OCR 성능 향상을 위한 <b>자동 학습 데이터셋 생성기</b> 구현<br>
+						&nbsp&nbsp- 랜덤 배경, 폰트, 문자열을 기반으로 이미지·좌표·텍스트 자동 생성<br>
+						고정되지 않은 문서 레이아웃 대응을 위한 <b>전처리</b> 및 <b>후처리</b> 알고리즘 전체 설계 및 구현<br>
+						&nbsp&nbsp- 평균 기울기 보정, 라인 정렬, 표 영역 구분, 배경 구분선 기반 분할 등<br>
+						<b>문자열 유사도</b> 알고리즘 개발 (20% 이내 오타 허용 및 최적 매칭 반환)<br>
+						AI 추론 결과를 시각화하는 웹 기반 <b>검수 도구</b> 개발<br>
+						&nbsp&nbsp- 단어 위치 표시, 추론값 툴팁, 이미지 속 단어 클릭 시 해당 라인 내용 출력 기능 포함<br>
+						문서 인식 정확도 평균 약 <b>95%</b> 달성<br>
+						<b>CUDA</b> 환경에서 AI 모델이 포함된 <b>RESTful API</b> 서버를 구축하고 운영<br>
+						&nbsp&nbsp- Linux/Windows 환경에서 Gunicorn + Nginx 기반으로 서비스 자동화<br>
+						YOLO + OpenCV 기반 <b>Android 실시간 인식 앱</b> 개발<br>
+						<b>듀얼카메라(UVCCamera)</b> 연동 및 인식 엔진 연동 기능 탑재<br><br><br><br>
+					</div>
+					<div class="content">
+						<h3>기술연구소의 기반을 동료들과 함께 하나씩 구축해 나간 이야기</h3>
+						제가 속했던 기술연구소는 이사님, 동기, 그리고 저까지 총 세 명으로 출발한 부서로, AI 문서 인식 기술을 실현하기 위한 방향 설정부터 환경 구성, 모델 리서치, 데이터셋 제작, 시각화 도구 개발 등 <b>기술적 기반</b>을 함께 구축해 나갔습니다.<br>
+						특히 저는 <b>알고리즘 구현, 문제 해결, AI 응용, 웹/모바일 프레임워크 구성</b> 등의 기술을 맡아, 프로젝트의 기술적 완성도를 높이는 데 많은 역할을 했습니다.<br>
+						동기는 환경 구성과 네트워크, 하드웨어에 대한 이해도와 전략적 기획 역량이 뛰어났고, 이후 합류한 후임은 우선순위 판단과 꼼꼼한 테스트 역량으로 팀에 힘을 보탰습니다.<br>
+						서로의 강점을 살려 유기적으로 <b>협업</b>할 수 있었고, 좋은 인재들과의 협업은 매우 좋은 경험이었습니다.<br>
+						그 결과, <b>다양한</b> 고객사에 문서 인식 프로그램들을 안정적으로 납품하는 성과로 이어졌습니다.<br><br><br><br>
+					</div>
+					<div class="content">
+						<h3>업무 중 새로 발견한 지식</h3>
+						● CentOS 기반 서버 환경에서 Flask, Gunicorn, Nginx를 활용하여 AI 문서 인식 서비스를 운영하던 중, 제한된 GPU 및 메모리 자원 하에서의 동시 요청 처리 성능 올리기<br>
+						TensorFlow 기반 추론 로직은 세션 내에서 모델이 로드되며 많은 <b>연산 자원을 소모</b>하고 추론 중 <b>블로킹</b>이 발생하며, Python의 <b>GIL(Global Interpreter Lock)</b> 특성상 하나의 프로세스 내에서 병렬 처리가 어렵기 때문에,<br>
+						기존의 Gunicorn 단일 프로세스 및 worker 수 조정 방식으로는 성능 개선에 한계가 존재. 실제로 두 개의 GPU를 분산 설정하고 worker 수를 조정해 보았지만, 동시 요청 처리 속도에 대한 변화는 미미함.<br>
+						이에 따라, 기존 구조를 개선하기로 결정하고 Flask 앱을 Gunicorn으로 서로 다른 포트에서 <b>여러 개의 독립 프로세스</b>로 실행하는 방식으로 전환. 각 인스턴스는 자체적으로 모델을 로딩하고 요청을 처리하며, Nginx에서는 <b>라운드로빈 방식</b>으로 트래픽을 분산시켜 병목 현상을 줄이는 구조로 설계.<br>
+						변경 전후의 성능을 검증하기 위해 Postman을 활용해 <b>동시 요청 시나리오 테스트</b>를 진행하였고, 결과적으로 평균 응답 속도가 <b>약 2배</b> 향상되었으며, 동시 접속 시 타임아웃 현상도 현저히 줄어드는 성과를 얻게 됨.<br><br>
+
+						● glibc 독립 빌드 및 사용자 환경 내 격리 적용<br>
+						라이브러리 사용 시 컴파일 환경과의 버전 일치가 필수적이므로 glibc 버전(2.27 이상)을 맞춰야 함<br>
+						시스템 전체에 영향을 주지 않고 glibc 2.27을 <b>독립적</b>으로 설치하고 적용하기 위해, 소스 컴파일 후 $HOME 디렉토리 하위에 설치하고 LD_LIBRARY_PATH 및 LD_PRELOAD 변수를 적절히 조정하여 사용자가 설치한 glibc로 프로그램이 실행되도록 설정.<br>
+						이 과정을 통해 glibc <b>독립 운영</b>이 가능하다는 점과, 여러 환경에서 라이브러리 충돌을 방지하는 실전적인 방법을 체득.<br>
+						ldd을 활용해 .so 파일이 의존하는 라이브러리를 역추적하여 오류 원인 분석 후 해결<br><br><br><br>
+					</div>
 				</div>
 			</section>
 			
@@ -412,7 +450,7 @@
 			<section id="cta" class="wrapper">
 				<div class="inner">
 					<h2>Introduce myself</h2>
-					<p>제 성격에 대해 소개합니다.</p>
+					<p>저에 대해 소개합니다.</p>
 				</div>
 			</section>
 
@@ -420,11 +458,22 @@
 			<section class="wrapper">
 				<div class="inner">
 				<div class="text-content">
-		            유연한 편에 속하며 호기심이 많습니다. 다양한 경험을 하는 것을 추구하고 창의적인 것을 좋아합니다. 단순한 것보다 다채로운 일을 하는 것을 선호합니다. 자유로운 편이지만 유지해온 저만의 가치관에 위배되는 행동은 잘 안 하려고 합니다.<br><br>
-		            주어진 문제에 대한 풀이 방법을 짜는 것을 좋아합니다. 응용력이 좋은 편에 속하는 것 같습니다. 이러한 부분은 개발자로서 강점인 것 같습니다. 조금 난이도가 있는 것에 도전 욕구가 잘 생깁니다. 또 성능과 메모리 효율성을 더 중요하게 생각합니다. 사람에게 읽기 쉽게 작성된 코드보다는 컴퓨터가 더 빠르게 처리할 수 있는 코드를 더 좋아합니다. 물론 가독성도 중요하지만 최적화된 데이터 구조를 사용하거나, 불필요한 메모리 할당을 줄이는 방식을 더 따지는 것 같습니다.<br><br>
-		            협력해서 프로젝트를 완성하는 것을 좋아합니다. 일을 잘하는 팀원과 함께하는 것도 좋긴 하지만 옆에서 격려만 잘해주는 사람이 있어도 저에게 열정이 생겨 잘 완성하고 싶은 의지가 활활 타오르게 됩니다.<br><br>
-		            그리고 긍정적이라는 평을 많이 받습니다. 프로젝트 진행 중 발생한 난관 속 팀원들이 부정적인 말을 해도 여러 해결 방법을 찾으려고 노력하면서 가능성을 찾고 "가능하다"라는 단어를 많이 사용합니다.<br><br>
-		            많고 다양한 사람들을 만나며 살아왔다고 생각합니다. 저와 성격이 비슷한 사람과는 동료 의식이 생기게 되어 협업의 즐거움이 생기고 성격이 반대인 사람과는 서로의 강점을 보완하는 경험으로 발전할 수 있어 다양한 사람들을 좋아합니다. 또한 저를 남녀노소 상관 없이 편하게 생각하시는 분이 많은 것 같습니다. 인간관계가 좋은 편이라고 생각합니다. 프로젝트의 질 좋은 완성과 개개인의 성장을 위해서는 팀원들과의 관계도 중요하다고 생각합니다.<br><br>
+					<h4>창의적이고 유연한 사고</h4>
+		            새로운 경험과 도전을 즐기며, 고정된 방식보다는 다양한 관점에서 문제를 바라보는 유연함을 지니고 있습니다. 단순하고 반복적인 작업보다는 다채로운 상황 속에서 창의적으로 접근하는 것을 선호합니다.<br>
+					그리고 문제를 해결하는 과정 자체를 즐기며, 주어진 상황에 가장 적합한 방법을 설계하고 적용하는 능력이 강점입니다. 특히 응용력이 뛰어나 복잡한 문제도 논리적으로 풀어가는 데 자신이 있습니다.<br>
+					개발 시 성능 최적화와 메모리 효율을 우선적으로 고려합니다. 불필요한 자원 사용을 줄이고, 빠른 처리 속도를 확보하는 코드 구조를 고민하는 편입니다. 컴퓨터 친화적인 코드를 선호하지만, 협업을 고려한 가독성 확보에도 노력하고 있습니다.<br>
+					개발자로서 협업을 매우 중요하게 생각하며, 팀원들과의 소통을 통해 더 나은 결과를 도출해내고자 합니다. 긍정적인 에너지로 팀 분위기를 밝게 만들며, 어려움이 닥쳐도 “가능하다”는 태도로 여러 해결책을 모색합니다.<br>
+					또한, 다양한 성향의 사람들과 어울리는 데 익숙하며, 성격이 비슷한 사람과는 시너지를 내고, 반대 성향의 사람과는 서로를 보완하며 성장하는 관계를 만들어갑니다. 연령이나 성별에 관계없이 편하게 느껴지는 성격으로, 원활한 협업과 분위기 조성에 도움이 됩니다.<br>
+					창의적이고 유연한 사고를 중요하게 여기는 만큼, 정형화된 방식보다는 새로운 접근을 선호합니다. 이로 인해 보수적인 환경에서는 의견 차이가 생기기도 하나, 항상 팀의 방향성과 조화를 이루기 위해 노력합니다.<br><br>
+					<h4>강점</h4>
+					새로운 프로젝트가 주어졌을 때 전체적인 아키텍처나 로직 흐름을 빠르게 이해하고,<br>
+					목표 달성을 위한 논리 구조와 전반적인 틀을 효과적으로 설계하는 능력이 제 강점이라고 생각합니다.<br>
+					특히 알고리즘 구현력에 자신이 있으며, 일정 수준 이상의 난이도가 있는 문제일수록 도전 정신이 생기고 몰입하게 됩니다.<br>
+					또 성능과 메모리 효율성을 많이 고려합니다. 불필요한 메모리 할당을 줄이기 위한 노력을 많이 기울입니다.<br><br>
+					<h4>보완점</h4>
+					과거에는 프로젝트를 수행할 때 정리하거나 문서화하는 것보다 직접 구현하고 문제를 해결하는 데 더 큰 가치를 두는 편이었습니다.<br>
+					그래서 자연스럽게 문서화나 기록에 상대적으로 적은 시간을 할애하게 되었고, 이는 협업이나 인수인계 과정에서 비효율로 이어질 수 있다는 점을 인지하게 되었습니다.<br>
+					최근에는 Notion을 사용하여 프로젝트 기획서, erd, 와이어프레임 등을 기록하고 작업 중간마다 메모를 남기고 있습니다.<br>
 		        </div>
 		        
 		        <!-- 핑크색 캔버스 덮기 -->
